Fixed bug: #13864: Flags in non-used elements shouldn't be wrapped to next line (Thanks to Jerome Blum)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/templavoila/branches/templavoila_1-4@31923 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/mod1/pagemodule.css
+++ b/mod1/pagemodule.css
@@ -89,7 +89,7 @@ div.warning a {
 	
 }
 .tpm-nonused-controls {
-	width: 36px;
+	width: 40px;
 	padding-left: 4px;
 }
 .tpm-nonused-ref {
